--- a/group-challenge.html
+++ b/group-challenge.html
@@ -1,5 +1,9 @@
 <html>
-<body>
-  <p>sanjay</p>
-</body>
+  <head>
+  	<meta charset="utf-8">
+    <title>Base web design</title>
+  </head>
+  <body>
+    <p>Make something amazing with the web</p>
+  </body>
 </html>
