--- a/group-challenge.html
+++ b/group-challenge.html
@@ -26,7 +26,7 @@
  <center>       
  <blockquote> 
    <h1> Messageboard</h1>
-   <h3>Today we are going to be continuing our lesseon frome yesterday don't forget to bring your homework.</h3> 
+   <h3>Today we are going to be continuing our lesson from yesterday don't forget to bring your homework.</h3> 
 </blockquote>
  </center>  </div>
         
