--- a/group-challenge.html
+++ b/group-challenge.html
@@ -4,7 +4,7 @@
   </head>
   
   	
-      <body style="background:grey">
+      <body style="background:lightgrey">
   	<meta charset="utf-8">
         <center> 
           <h1> 
@@ -18,7 +18,7 @@
     width: 340px;
     position:absolute;
     left:100px;
-    bottom:300px;">   
+    bottom:400px;">   
         <a href="http://www.w3schools.com">  
           <img src="http://216.138.208.196/custom/web/content/BR%20homework%20help%20button.png"height="200" width="340"> Click here for help with homework
            </a>
@@ -128,6 +128,17 @@
         <br/>
       </center>
         </div>
-        
+         <div style="
+    border: 5px solid;
+    border-radius: 25px;
+    width: 600px;
+    position:relative;
+    left: 410px;
+    bottom:700px;
+    height:300px;">
+           <center>
+        <iframe id="vp1ykQKk" title="Video Player" width="532" height="243" frameborder="0" src="https://s3.amazonaws.com/embed.animoto.com/play.html?w=swf/production/vp1&e=1415198162&f=ykQKkjO6twqvZsfw2vri9Q&d=0&m=b&r=360p&volume=100&start_res=360p&i=m&asset_domain=s3-p.animoto.com&animoto_domain=animoto.com&options=" allowfullscreen></iframe><p><a href="http://animoto.com/play/ykQKkjO6twqvZsfw2vri9Q"></a></p>
+           </center>
+        </div>
    </body>
 	</html>
